Added some styling - Profile page

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,4 +1,15 @@
+.Skills {
 
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 
 
 
