--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -26,3 +26,14 @@
   display: block;
   border-radius: 50%;
 }
+
+.logo {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 40px;
+}
