--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,15 +1,17 @@
-.Skills {
+.UserProfile {
 
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin: 5%;
+
+    
+
 }
 
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
+.Save {
+
+    padding: 2%;
+}
+
+
 
 
 
