finish question all UI and able to go to single question

--- a/client/src/components/Question/SingleQuestion/SingleQuestion.scss
+++ b/client/src/components/Question/SingleQuestion/SingleQuestion.scss
@@ -6,6 +6,12 @@
   height: 60px;
   box-sizing: border-box;
   position: relative;
+  cursor: pointer;
+}
+
+.singleQuestionContainer:hover {
+  background-color: lightgray;
+  opacity: 0.8;
 }
 
 .questionInfo {
@@ -41,7 +47,34 @@
 }
 
 .questionTitle {
+  height: 100%;
   width: 100%;
+  display: inline;
+
+  .title {
+    height: 65%;
+    width: 100%;
+    font-size: medium;
+    display: flex;
+    align-items: center;
+  }
+
+  .tagList {
+    height: 35%;
+    width: 100%;
+
+    .tag {
+      font-size: smaller;
+      height: 100%;
+      padding: 2px;
+      background-color: powderblue;
+      border-radius: 3px;
+      display: inline-flex;
+      align-items: center;
+      box-sizing: border-box;
+      margin-right: 5px;
+    }
+  }
 }
 
 .ownerInfo {
